<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        android:layout_marginTop="10dp"
        style="?android:listSeparatorTextViewStyle"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/crime_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/crime_title_hint"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/count_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/colorRed"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Details"/>

    <EditText
            android:id="@+id/crime_painter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="4"
            android:hint="@string/crime_details_hint"
            android:textSize="20dp"
            />



    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/crime_details_label"
    style="?android:listSeparatorTextViewStyle"
    />

    <EditText android:id="@+id/crime_detail"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/crime_desc_hint"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:textSize="20dp"
              android:layout_weight="4"
        />

    <TextView
        android:id="@+id/textView2"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DATE"/>

    <Button android:id="@+id/crime_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorPrimary"
        />
    <!--<Button-->
        <!--android:id="@+id/choose_from_album"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:text="Choose From Album"-->
       <!--/>-->

    <Button
        android:id="@+id/bottom_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="Choose"
        />
    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/upload"
        android:layout_gravity="center_horizontal"/>

    <Button android:id="@+id/send_crime_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/send_crime_Button"
        />

    <Button android:id="@+id/create_crime_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/create_crime_Button"
        />

    <Button android:id="@+id/report_crime_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/report_crime_Button"
        />

</LinearLayout>
    </ScrollView>